vlib/v/parser/tests/comptime_for_invalid_expr_err.vv
module main

struct MyStruct {
	f_u8 u8
	f_u16 u16
}

fn main() {
	a := MyStruct {
		f_u8 : u8(12)
		f_u16 : u16(32)
	}

	b := MyStruct {
		f_u8 : u8(12)
		f_u16 : u16(32)
	}

	$for f in $MyStruct.fields {
		assert a.${f.field_name} == b.${f.field_name}
	}
}
